* don't include children of section with empty title in TOC
* don't include children of section with empty title in outline
* only load Treetop runtime so it does not overload `require` method
* fix collation order of index terms that differ only in case
* don't crash if page background image value is empty (interpret as "none")

== 2.3.3 (2022-10-21) - @mojavelinux

Bug Fixes::

* fix crash if last fragment in TOC entry is not rendered (#2354)
* pass `-dNEWPDF=false` to Ghostscript when optimizing PDF so it does not break internal links (#2355)

=== Details

{url-repo}/releases/tag/v2.3.3[git tag] | {url-repo}/compare/v2.3.2\...v2.3.3[full diff]

== 2.3.2 (2022-09-17) - @mojavelinux

Improvements::

* provide fallback value for `base-font-size` theme key before processing keys (#2342)

=== Details

{url-repo}/releases/tag/v2.3.2[git tag] | {url-repo}/compare/v2.3.1\...v2.3.2[full diff]

== 2.3.1 (2022-09-17) - @mojavelinux

Improvements::

* provide a fallback value for `base-font-size` when loading theme (#2343)

Bug Fixes::

* fix crash when smallcaps text transform is applied to a phrase (#2339)
* don't add chapter signifier if `chapter-signifier` is unset (#2328)
* don't add part signifier if `part-signifier` is unset (#2328)
* don't include bottom margin when computing heading height if `heading-min-height-after` theme key is empty (#2326)
* draw border on heading (section title or discrete heading) if it is advanced to next page (#2322)
* arrange heading even if section is empty
* ensure `heading-min-height-after` theme key is ignored if section is empty or discrete heading is last child
* don't force justify first line of abstract if it ends with a hard break

=== Details

{url-repo}/releases/tag/v2.3.1[git tag] | {url-repo}/compare/v2.3.0\...v2.3.1[full diff]

== 2.3.0 (2022-08-16) - @mojavelinux

Enhancements::

* place footnotes directly below last block of content if `footnotes-margin-top` theme key is 0 (#2291)