@@ -67,7 +67,8 @@ TIP: For the latest Asciidoctor PDF features and fixes, see {url-project-docs}/w
 
 == Prerequisites
 
-Asciidoctor PDF is a Ruby application.
+Asciidoctor PDF is built on Asciidoctor.
+Like Asciidoctor, Asciidoctor PDF is a Ruby application.
 Therefore, to use it, you'll need a Ruby runtime.
 
 The supported Ruby runtimes are Ruby 2.7 or greater and JRuby 9.2 or greater.
@@ -92,6 +93,8 @@ Pass the name of the gem to the `gem install` command as follows:
 
 Installing Asciidoctor PDF will install a number of other gems mentioned in these docs, including asciidoctor, prawn, prawn-svg, prawn-table, prawn-icon, and ttfunk.
 For the most part, the versions of these dependencies are locked to the version of Asciidoctor PDF.
+The patch versions are allowed to vary.
+Please note that the minimum supported version of the asciidoctor gem (Asciidoctor) is 2.0.10.
 
 For further installation information about installing Asciidoctor PDF, see {url-project-docs}/install/[the installation documentation].
 For troubleshooting help, see {url-project-docs}/install/#installation-troubleshooting[Installation troubleshooting].
